Bug 450386 - Jitsi Meet screen sharing botton has no effect
Summary: Jitsi Meet screen sharing botton has no effect
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: webenginepart (other bugs)
Version First Reported In: 21.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-16 14:00 UTC by Klaus-Dieter Fietze
Modified: 2022-02-20 18:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Systemd output for the time in question (3.25 KB, text/plain)
2022-02-16 14:00 UTC, Klaus-Dieter Fietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Klaus-Dieter Fietze 2022-02-16 14:00:52 UTC
Created attachment 146820 [details]
Systemd output for the time in question

SUMMARY
***
Jitsi Meet screen sharing does not work
***


STEPS TO REPRODUCE  
1. Open Jitsi Meet either on their free site https://meet.jit.si/ or any other Jitsi Meet server  
2. Start meeting or join in to an existing meeting  
3. Hit "Toggle Screen Share" botton in the lower middle part of the screen  

OBSERVED RESULT  
Nothing happens.  

EXPECTED RESULT  
A dialogue box should appear, asking for the part of the screen to be shared.  

SOFTWARE/OS VERSIONS  
Operating System: openSUSE Tumbleweed 20220213
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.8-1-default (64-bit)
Graphics Platform: X11
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 630

ADDITIONAL INFORMATION  
Does not work on Falcon either, but works well on Firefox (same machine).
Comment 1 Bug Janitor Service 2022-02-20 17:53:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/110
Comment 2 Stefano Crocco 2022-02-20 18:21:22 UTC
Git commit 56bc69f5d468e675ad405b0278eb68407f150cc7 by Stefano Crocco.
Committed on 20/02/2022 at 17:53.
Pushed by dfaure into branch 'master'.

Enable ScreenCapture attribute in WebEnginePart

In theory, this should enable screen sharing using platform such as
Google Meet and Jitsi. According to my tests, however, it doesn't always
work. I think the reason are limitations in QtWebEngine itself.

M  +2    -0    webenginepart/src/webenginepartcontrols.cpp

https://invent.kde.org/network/konqueror/commit/56bc69f5d468e675ad405b0278eb68407f150cc7