Enable ScreenCapture attribute in WebEnginePart

In theory, this should enable screen sharing using platform such as
Google Meet and Jitsi. According to my tests, however, it doesn't always
work. I think the reason are limitations in QtWebEngine itself.

BUG: 450386